Tue Sep 22 20:27:53 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Context_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Generators.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Project_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Servant_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/codegen.mpc:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/opensplice:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/opensplice/Event_Traits_Generator.h:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/opensplice/Event_Traits_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/opensplice/Stub_Generator.h:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/opensplice/Stub_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/rtidds:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/rtidds/Event_Traits_Generator.h:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/rtidds/Event_Traits_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/rtidds/Stub_Generator.h:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/rtidds/Stub_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/paradigms/CHAOS.xme:
        * MDE/GME/paradigms/CHAOS/paradigms/CHAOS.xml:
        * MDE/GME/paradigms/CHAOS/paradigms/CHAOS.xmp:
        * MDE/GME/paradigms/CHAOS/paradigms/CHAOS_uml.xme:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/opensplice/Event_Traits_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/opensplice/Event_Traits_Generator.cpp:
        * MPC/config/cuts_chaos.mpb:
        * MPC/config/cuts_chaos_ccm.mpb:
        * MPC/config/cuts_chaos_ccm_skel.mpb:
        * MPC/config/cuts_chaos_ccm_stub.mpb:
        * cuts/arch/chaos/ccm/CHAOS_CCM.mpc:
        * cuts/arch/chaos/ccm/CHAOS_CCM_EventConsumer.h: